# zaz

./: .gitignore  .rumdl.toml  Cargo.toml  LICENSE  Makefile  README.md  cloudbuild.yaml  zaz.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: docs_cli.rs  main.rs  splicer.rs
crates/zaz-config/: Cargo.toml
crates/zaz-config/src/: error.rs  lib.rs  schema.rs  toml_spanned.rs  user.rs  validate.rs
crates/zaz-daemon/: Cargo.toml
crates/zaz-daemon/src/: api.rs  dependency.rs  engine.rs  error.rs  lib.rs  log_layer.rs  log_storage.rs  log_storage_sqlite.rs  log_store.rs  notify.rs  server.rs  state.rs
crates/zaz-mcp/: Cargo.toml
crates/zaz-mcp/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/zaz-process/: Cargo.toml
crates/zaz-process/src/: daemon.rs  error.rs  executor.rs  launcher.rs  lib.rs  prep.rs  pty.rs  signal.rs  task.rs
crates/zaz-tui/: Cargo.toml
crates/zaz-tui/src/: ansi.rs  app.rs  daemon.rs  error.rs  events.rs  help.rs  lib.rs  logs.rs  ui.rs
crates/zaz-tui/src/styles/: full.rs  minimal.rs  mod.rs  multi_pane.rs
crates/zaz-vars/: Cargo.toml
crates/zaz-vars/src/: error.rs  expand.rs  lib.rs  scan.rs
crates/zaz-watch/: Cargo.toml
crates/zaz-watch/src/: batch.rs  error.rs  glob.rs  lib.rs  watcher.rs
docs/: README.md  architecture.md  cli.md  configuration.md  mcp.md  tui.md  user-configuration.md
docs/examples/: README.md
docs/examples/go-dev-server/: README.md  zaz.toml
docs/examples/multi-group-dependencies/: README.md  zaz.toml
docs/examples/node-dev-server/: README.md  zaz.toml
docs/examples/pty-less-environment/: README.md  zaz.toml
docs/examples/task-only-workflow/: README.md  zaz.toml
docs/migration/: README.md  foreman.md  modd.md
docs/migration/modd-example/: README.md  zaz.toml
src/: cli.rs  lib.rs  main.rs  supervisor.rs
tests/: cli_exit_behavior.rs  daemon_targeting.rs  example_configs.rs  mcp_flags.rs  mcp_handshake.rs  mcp_tools.rs  persistent_logs.rs  workspace.rs
