[package]
name = "zaz-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for zaz (TOML/JSON)"

[dependencies]
globset.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
