[package]
name = "zaz-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon and API server for zaz"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zaz-config.workspace = true
zaz-process.workspace = true
zaz-vars.workspace = true
zaz-watch.workspace = true
