[package]
name = "zaz-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon and API server for zaz"

[dependencies]
indexmap.workspace = true
notify-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zaz-config.workspace = true
zaz-process.workspace = true
zaz-vars.workspace = true
zaz-watch.workspace = true

[dev-dependencies]
tempfile.workspace = true
