[package]
name = "zaz-process"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process management for zaz"

[dependencies]
nix.workspace = true
portable-pty.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zaz-config.workspace = true
